<resources>
    <string name="app_name">PairShare</string>
    <string name="nav_add">Add</string>
    <string name="nav_lists">Lists</string>
    <string name="label_add_entry">Add Entry</string>
    <string name="label_summary">Summary</string>
    <string name="label_add_a_comment">Add a comment (optional):</string>
    <string name="hint_add_a_comment">Describe the expense</string>
    <string name="title_select_active_expense">Select active expense:</string>
    <string name="label_add_time">Time:</string>
    <string name="label_add_expense">Expense (€):</string>
    <string name="hint_add_how_much_did_you_spend">How much did you spend?</string>
    <string name="bt_add">Add</string>
    <string name="menu_logout">Log out</string>
    <string name="title_add_a_new_expense_list">Create new expense list</string>
    <string name="label_add_expense_list_name">List name:</string>
    <string name="hint_add_list_name">Give your shared list a name.</string>
    <string name="label_add_expense_list_invite">Share with:</string>
    <string name="hint_add_expense_list_invite">E-mail of the other sharer</string>
    <string name="label_select_list">Active List</string>
    <string name="label_add_expense_list">Create new list</string>
    <string name="title_invited_lists">Invited Lists</string>
    <string name="title_add_a_new">Add new Expense:</string>
    <string name="title_last_expenses">Last Expenses:</string>
    <string name="nav_expenses">Expenses</string>
    <string name="label_last_expenses">Last Expenses</string>
    <string name="add_expense_content_description_add_an_image">Add an image</string>

    <!-- About page related -->
    <string name="about_privacy_policy_title">Privacy Policy</string>
    <string name="about_privacy_policy_brief">PairShare is a free and open source app that aims to
        support you with keeping track of sharing expenses with other people.
        The app is meant to be self hosted using firebase. sliebald is not
        responsible for any privacy related or other issues if you did not get access to this
        installation directly from him.
        You can find the default privacy policy in the App Store or under the following link:
    </string>
    <string name="about_code_title">Open Source</string>
    <string name="about_privacy_policy_url">https://sliebald.com/privacy-policy/pairshare</string>
    <string name="about_cula_code_label">You can find the source code of the app and
        installation/hosting instructions on github:</string>
    <string name="about_cula_code_url">https://github.com/SLiebald/PairShare</string>
    <string name="menu_about">About</string>
    <string name="warning_add_select_list">Add or select a list</string>

</resources>
