<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addExpenseList.AddExpenseListFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_add_expense_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/tv_title_add_list"
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_add_a_new_expense_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_label_add_expense_list_name"
                style="@style/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_add_expense_list_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_add_list" />

            <EditText
                android:id="@+id/et_add_expense_list_name"
                style="@style/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_add_list_name"
                android:importantForAutofill="no"
                android:inputType="textAutoCorrect"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/tv_label_add_expense_list_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_label_add_expense_list_name"
                app:layout_constraintTop_toTopOf="@+id/tv_label_add_expense_list_name"
                tools:targetApi="o"
                tools:text="My shared list" />

            <TextView
                android:id="@+id/tv_label_add_expense_list_invite"
                style="@style/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_add_expense_list_invite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_add_expense_list_name" />

            <EditText
                android:id="@+id/et_add_expense_list_invite"
                style="@style/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_add_expense_list_invite"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/tv_label_add_expense_list_invite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_label_add_expense_list_invite"
                app:layout_constraintTop_toTopOf="@+id/tv_label_add_expense_list_invite"
                tools:targetApi="o"
                tools:text="max@example.com" />

            <Button
                android:id="@+id/button"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/bt_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_add_expense_list_invite" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>