<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AddEntryFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/tv_title_add"
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_add_a_new_expense"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_label_add_time"
                style="@style/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_add_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_add" />


            <EditText
                android:id="@+id/et_add_date"
                style="@style/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:cursorVisible="false"
                android:focusableInTouchMode="false"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/tv_label_add_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_label_add_time"
                app:layout_constraintTop_toTopOf="@+id/tv_label_add_time"
                tools:text="24.Dec..." />

            <TextView
                android:id="@+id/tv_label_add_expense"
                style="@style/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_add_expense"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_add_time" />

            <EditText
                android:id="@+id/et_add_expense"
                style="@style/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_add_how_much_did_you_spend"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/tv_label_add_expense"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_label_add_expense"
                app:layout_constraintTop_toTopOf="@+id/tv_label_add_expense"
                tools:targetApi="o"
                tools:text="4.3" />


            <TextView
                android:id="@+id/tv_label_add_comment"
                style="@style/label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_add_a_comment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_add_expense" />

            <EditText
                android:id="@+id/et_add_comment"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="top|start"
                android:hint="@string/hint_add_a_comment"
                android:importantForAutofill="no"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_add_comment"
                tools:targetApi="o" />

            <Button
                android:id="@+id/button"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/bt_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_add_comment" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>